# bootstrap-cxx

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
src/: foo.cc  foo.cpp  foo.hpp  log.cc  log.cpp  log.hh  log.hpp  main.cc  main.cpp  main.hh  main.hpp  test_runner.cc  test_runner.cpp  test_runner.hh
tests/: bootstrap-test.cpp  foo_test.cc  foo_test.cpp
